--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.15.1",
     "eslint": "6.8.0",
+    "prop-types": "^15.7.2",
     "stylelint": "13.8.0",
     "stylelint-order": "4.1.0"
   }
