--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "react-scripts test --verbose=true",
     "eject": "react-scripts eject",
     "lint:styles": "npx stylelint '**/*.css'",
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js,.jsx"
+    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js --ext .jsx"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,7 +39,7 @@
     "@testing-library/user-event": "12.1.5",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.15.1",
-    "eslint": "6.8.0",
+    "eslint": "^6.8.0",
     "stylelint": "13.8.0",
     "stylelint-order": "4.1.0"
   }
