--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "14": "^3.1.6",
     "acorn": "7.1.1",
     "eslint-config-trybe-frontend": "1.1.0",
     "minimist": "1.2.3",
+    "node": "^15.8.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-scripts": "3.4.0"
