--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,27 @@
 {
-  "env": {
-    "browser": true,
-    "es2020": true
-  },
-  "extends": "trybe-frontend",
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
+    "env": {
+        "browser": true,
+        "es6": true,
+        "node": true
     },
-    "sourceType": "module"
-  },
-  "plugins": ["react", "sonarjs"]
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended"
+    ],
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": 2018,
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react"
+    ],
+    "rules": {
+    }
 }
