--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "minimist": "1.2.3",
     "react": "16.14.0",
     "react-dom": "16.14.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,7 +39,8 @@
     "@testing-library/user-event": "12.1.5",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.15.1",
-    "eslint": "6.8.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.22.0",
     "stylelint": "13.8.0",
     "stylelint-order": "4.1.0"
   }
