--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "acorn": "7.1.1",
     "eslint-config-trybe-frontend": "1.1.0",
+    "jest": "^24.9.0",
     "minimist": "1.2.3",
-    "nanoid": "^3.1.22",
+    "nanoid": "^2.1.11",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-scripts": "3.4.0"
@@ -43,5 +44,12 @@
     "eslint": "6.8.0",
     "stylelint": "13.8.0",
     "stylelint-order": "4.1.0"
+  },
+  "providedServices": {
+    "tester": {
+      "versions": {
+        "1.0.0": "provideTester"
+      }
+    }
   }
 }
